ssl warning thing

--- a/output.css
+++ b/output.css
@@ -8,6 +8,29 @@ body {
 .main {
   padding: 30px 0; }
 
+.hide {
+  display: none; }
+
+.ssl-warning {
+  display: none; }
+
+.ssl-warning.active {
+  display: block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5); }
+  .ssl-warning.active p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #fff;
+    width: 280px;
+    transform: translate(-50%, -50%);
+    padding: 20px; }
+
 a {
   color: #000;
   padding: 3px;
@@ -45,7 +68,7 @@ a {
   @media (min-width: 768px) {
     .info__list__item {
       width: 30%; } }
-  @media (min-width: 1092px) {
+  @media (min-width: 992px) {
     .info__list__item {
       width: 22.5%; } }
   @media (min-width: 1200px) {
