--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,4 @@
+// run sass --watch styles/style.scss:output.css
 * {
   font-family: 'futura-pt', 'Libre Franklin', sans-serif;
   font-weight: 700;
@@ -11,15 +12,34 @@ body {
 $off-white: rgb(243, 242, 237);
 $blue-steel: #607d8b;
 $screen-sm-min: 768px;
-$screen-md-min: 1092px;
+$screen-md-min: 992px;
 $screen-lg-min: 1200px;
 
-// li.red {
-//   color: red;
-//   &:hover {
-//     color: blue;
-//   }
-// }
+.hide {
+  display: none;
+}
+.ssl-warning {
+  display: none;
+}
+.ssl-warning.active {
+  display: block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.5);
+  p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #fff;
+    width: 280px;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+  }
+}
+
 a {
   color: #000;
   padding: 3px;
